--- a/skills/declarative/calendarSkill/runtime/customaction/Microsoft.BotFramework.Composer.CustomAction.csproj
+++ b/skills/declarative/calendarSkill/runtime/customaction/Microsoft.BotFramework.Composer.CustomAction.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.Graph" Version="3.15.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\experimental\components\MsGraph\Microsoft.BotFramework.CustomAction.MsGraph.csproj" />
+  </ItemGroup>
+
 </Project>
