--- a/experimental/generator-dotnet-yeoman/generators/app/templates/dotnet/webapp/botName.csproj
+++ b/experimental/generator-dotnet-yeoman/generators/app/templates/dotnet/webapp/botName.csproj
@@ -5,8 +5,11 @@
     <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="Dialogs\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
-    <PackageReference Include="Microsoft.Bot.Builder.Runtime" Version="4.12.0-daily.preview.20201207.192346.a48b032" />
-    <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
+    <PackageReference Include="Microsoft.Bot.Builder.Runtime" Version="4.12.0-daily.preview.20201217.196372.445b9b4" />
   </ItemGroup>
 </Project>
