--- a/experimental/generator-adaptive-bot/package.json
+++ b/experimental/generator-adaptive-bot/package.json
@@ -13,9 +13,25 @@
     "yeoman-generator"
   ],
   "dependencies": {
-    "uuid": "^8.3.1",
-    "yeoman-generator": "^1.1.1"
+    "uuid": "^8.3.2",
+    "yeoman-generator": "^4.12.0"
+  },
+  "devDependencies": {
+    "@tsconfig/node12": "^1.0.7",
+    "@types/uuid": "^8.3.0",
+    "@types/yeoman-generator": "^4.11.3",
+    "copyfiles": "^2.4.1",
+    "npm-run-all": "^4.1.5",
+    "shx": "^0.3.3",
+    "typescript": "^4.1.3"
   },
   "author": "Bot Framework",
-  "license": "ISC"
+  "license": "ISC",
+  "scripts": {
+    "build": "npm-run-all build:tsc build:copy",
+    "build:tsc": "tsc -b",
+    "build:copy": "shx cp -R src/app/templates generators/app/templates",
+    "clean": "shx rm -rf generators tsconfig.tsbuildinfo",
+    "prepare": "npm run build"
+  }
 }
