--- a/experimental/generator-adaptive-bot/package.json
+++ b/experimental/generator-adaptive-bot/package.json
@@ -23,16 +23,23 @@
     "copyfiles": "^2.4.1",
     "npm-run-all": "^4.1.5",
     "shx": "^0.3.3",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "yo": "^3.1.1"
   },
   "author": "Bot Framework",
   "license": "ISC",
   "scripts": {
     "build": "npm-run-all build:tsc build:copy",
-    "build:copy": "npm-run-all -p build:copy:dotnet",
+    "build:copy": "npm-run-all -p build:copy:dotnet build:copy:js",
     "build:copy:dotnet": "shx cp -R src/dotnet/templates generators/dotnet/templates",
+    "build:copy:js": "shx cp -R src/js/templates generators/js/templates",
     "build:tsc": "tsc -b",
-    "clean": "shx rm -rf generators tsconfig.tsbuildinfo",
-    "prepare": "npm run build"
+    "clean": "shx rm -rf my-adaptive-bot generators tsconfig.tsbuildinfo",
+    "prepare": "yarn build",
+    "test": "npm-run-all clean build yo",
+    "yo": "npm-run-all yo:generate yo:build yo:test",
+    "yo:build": "cd my-adaptive-bot && yarn links && yarn",
+    "yo:test": "cd my-adaptive-bot && yarn watch",
+    "yo:generate": "yo adaptive-bot:js my-adaptive-bot"
   }
 }
