Added yeomen template capabilities to ensure appsettings values are dnamically populated

--- a/experimental/templates/generator-conversational-core/generators/app/templates/settings/appsettings.json
+++ b/experimental/templates/generator-conversational-core/generators/app/templates/settings/appsettings.json
@@ -43,7 +43,7 @@
   "runtime": {
     "customRuntime": true,
     "path": "../",
-    "command": "dotnet run --project {projName}",
+    "command": "dotnet run --project <%= botName %>",
     "key": "csharp-azurewebapp-v2"
   },
   "downsampling": {
