--- a/experimental/components/General/package.json
+++ b/experimental/components/General/package.json
@@ -1,6 +1,7 @@
 {
   "name": "preview-bot-component-generalintent",
-  "version": "0.0.1-preview2",
+  "version": "0.0.1-preview3",
+  "keywords": ["bf-component"],
   "description": "Dialogs to provide general intent handling - like help and cancel",
   "main": "index.js",
   "scripts": {
