--- a/experimental/components/Onboarding/package.json
+++ b/experimental/components/Onboarding/package.json
@@ -1,6 +1,7 @@
 {
   "name": "preview-bot-component-onboardingdialog",
-  "version": "0.0.1-preview1",
+  "version": "0.0.1-preview2",
+  "keywords": ["bf-component"],
   "description": "Dialogs to provide an onboarding experience",
   "main": "index.js",
   "scripts": {
