--- a/experimental/components/UnknownIntent/UnknownIntent.nuspec
+++ b/experimental/components/UnknownIntent/UnknownIntent.nuspec
@@ -2,13 +2,13 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Preview.Bot.Component.UnknownIntentDialog</id>
-        <version>0.0.1-preview4</version>
+        <version>0.0.1-preview5</version>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <releaseNotes>first version of unknown intent dialog package</releaseNotes>
         <description>Dialogs to provide a fallback experience</description>
-        <tags>conversationalcore unknownintent preview</tags>
+        <tags>bf-component conversationalcore unknownintent preview</tags>
         <dependencies />
     </metadata>
 
