Adding generator support to specify application settings directory, exclude default appsettings.json, provide a NuGet.config to pull packages from daily source, and include .blu files in build output.

--- a/experimental/generator-adaptive-bot/generators/app/templates/dotnet/functions/botName.csproj
+++ b/experimental/generator-adaptive-bot/generators/app/templates/dotnet/functions/botName.csproj
@@ -18,7 +18,7 @@
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-    <Content Include="**/*.dialog;**/*.lg;**/*.lu;**/*.qna" Exclude="$(BaseOutputPath)/**;$(BaseIntermediateOutputPath)/**">
+    <Content Include="**/*.blu;**/*.dialog;**/*.lg;**/*.lu;**/*.qna" Exclude="$(BaseOutputPath)/**;$(BaseIntermediateOutputPath)/**">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
