--- a/experimental/templates/generator-conversational-core/generators/app/templates/settings/appsettings.json
+++ b/experimental/templates/generator-conversational-core/generators/app/templates/settings/appsettings.json
@@ -43,7 +43,7 @@
   "runtime": {
     "customRuntime": true,
     "path": "../",
-    "command": "dotnet run --project <%= botName %>",
+    "command": "dotnet run --project <%= botName %>.csproj",
     "key": "csharp-azurewebapp-v2"
   },
   "downsampling": {
