feat: Runtime Generator integration updates (#499)
* Adding generator support to specify application settings directory, exclude default appsettings.json, provide a NuGet.config to pull packages from daily source, and include .blu files in build output.

* Fixing bug with path resolving for copying files per changes to how assets are handled. Updating Runtime package version. Restoring command line configuration source for web app.

* Removing unnecessary path.join() invocation.

--- a/experimental/generator-adaptive-bot/generators/app/templates/dotnet/webapp/botName.csproj
+++ b/experimental/generator-adaptive-bot/generators/app/templates/dotnet/webapp/botName.csproj
@@ -5,12 +5,12 @@
     <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
   </PropertyGroup>
   <ItemGroup>
-    <Content Include="**/*.dialog;**/*.lg;**/*.lu;**/*.qna" Exclude="$(BaseOutputPath)/**;$(BaseIntermediateOutputPath)/**">
+    <Content Include="**/*.blu;**/*.dialog;**/*.lg;**/*.lu;**/*.qna" Exclude="$(BaseOutputPath)/**;$(BaseIntermediateOutputPath)/**">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
-    <PackageReference Include="Microsoft.Bot.Builder.Runtime" Version="4.12.0-daily.preview.20201218.196720.6ea9b09" /><%- packageReferences %>
+    <PackageReference Include="Microsoft.Bot.Builder.Runtime" Version="4.12.0-daily.preview.20210126.206273.e467c25" /><%- packageReferences %>
   </ItemGroup>
 </Project>
