--- a/experimental/feeds/components.json
+++ b/experimental/feeds/components.json
@@ -1,29 +1,29 @@
 [
   {
-    "name": "Preview.Bot.Component.GeneralIntent",
-    "version": "0.0.1-preview2",
+    "name": "Preview.Bot.Component.CancelDialog",
+    "version": "0.0.1-preview1",
     "source": "nuget",
     "language": "c#",
     "category": "Conversational Core",
     "authors": [
       "Bot Framework"
     ],
-    "description": "Dialogs to provide general intent handling - like help and cancel"
+    "description": "Dialog to provide \"cancel\" utterance handling"
   },
   {
-    "name": "preview-bot-component-generalintent",
-    "version": "0.0.1-preview2",
+    "name": "preview-bot-component-canceldialog",
+    "version": "0.0.1-preview1",
     "source": "npm",
     "language": "js",
     "category": "Conversational Core",
     "authors": [
       "Bot Framework"
     ],
-    "description": "Dialogs to provide general intent handling - like help and cancel"
+    "description": "Dialog to provide \"cancel\" utterance handling"
   },
   {
     "name": "Preview.Bot.Component.GreetingDialog",
-    "version": "0.0.1-preview3",
+    "version": "0.0.1-preview5",
     "source": "nuget",
     "language": "c#",
     "category": "Conversational Core",
@@ -34,7 +34,7 @@
   },
   {
     "name": "preview-bot-component-greetingdialog",
-    "version": "0.0.1-preview1",
+    "version": "0.0.1-preview3",
     "source": "npm",
     "language": "js",
     "category": "Conversational Core",
@@ -42,6 +42,28 @@
       "Bot Framework"
     ],
     "description": "Dialogs to provide a greeting experience"
+  },
+  {
+    "name": "Preview.Bot.Component.Help",
+    "version": "0.0.1-preview1",
+    "source": "nuget",
+    "language": "c#",
+    "category": "Conversational Core",
+    "authors": [
+      "Bot Framework"
+    ],
+    "description": "Dialog to provide \"help\" utterance handling"
+  },
+  {
+    "name": "preview-bot-component-helpdialog",
+    "version": "0.0.1-preview1",
+    "source": "npm",
+    "language": "js",
+    "category": "Conversational Core",
+    "authors": [
+      "Bot Framework"
+    ],
+    "description": "Dialog to provide \"help\" utterance handling"
   },
   {
     "name": "Preview.Bot.Component.OnboardingDialog",
@@ -64,27 +86,5 @@
       "Bot Framework"
     ],
     "description": "Dialogs to provide an onboarding experience"
-  },
-  {
-    "name": "Preview.Bot.Component.UnknownIntentDialog",
-    "version": "0.0.1-preview4",
-    "source": "nuget",
-    "language": "c#",
-    "category": "Conversational Core",
-    "authors": [
-      "Bot Framework"
-    ],
-    "description": "Dialogs to provide a fallback experience"
-  },
-  {
-    "name": "preview-bot-component-unknownintentdialog",
-    "version": "0.0.1-preview1",
-    "source": "npm",
-    "language": "js",
-    "category": "Conversational Core",
-    "authors": [
-      "Bot Framework"
-    ],
-    "description": "Dialogs to provide a fallback experience"
   }
 ]
