--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -1,5 +1,5 @@
 # Set to true to add reviewers to pull requests
-addReviewers: false
+addReviewers: true
 
 # Set to true to add assignees to pull requests
 addAssignees: false
