--- a/experimental/components/General/GeneralIntent.nuspec
+++ b/experimental/components/General/GeneralIntent.nuspec
@@ -2,13 +2,13 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Preview.Bot.Component.GeneralIntent</id>
-        <version>0.0.1-preview3</version>
+        <version>0.0.1-preview2</version>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <releaseNotes>first version of general intent package</releaseNotes>
         <description>Dialogs to provide general intent handling - like help and cancel</description>
-        <tags>bf-component conversationalcore generalintent preview</tags>
+        <tags>conversationalcore generalintent preview</tags>
         <dependencies />
     </metadata>
 
