Refactor getSchedule and searchEvents (#527)
* Removed unused files

* Renamed LookupContactsDialog to GetContactsDialog

* Boilerplate composer files

* Updated getEvents logic

* boilerplate

* added msGraph project to solution

* updated tests

* renamed SearchEvents and GetEvents dialogs

* Added getEvents tests

* ignore updateEvent test

* update testsettings.json

* Added error output for testing

* updated testsetting.json

* Reverted errorMessage change

Co-authored-by: Thomas Chung <thomas.chung@live.com>

--- a/skills/declarative/calendarSkill/settings/cross-train.config.json
+++ b/skills/declarative/calendarSkill/settings/cross-train.config.json
@@ -1,17 +1,13 @@
 {
   "calendarskill.en-us": {
     "rootDialog": true,
-    "triggers": {
-      "": [
-        "GetScheduleDialog.en-us"
-      ]
-    }
+    "triggers": {}
   },
   "CreateEventDialog.en-us": {
     "rootDialog": false,
     "triggers": {
       "": [
-        "LookupContactDialog.en-us",
+        "GetContactsDialog.en-us",
         "ListDialog.en-us",
         "ResolveDateTimeDialog.en-us"
       ],
@@ -26,7 +22,7 @@
       "Skip": []
     }
   },
-  "LookupContactDialog.en-us": {
+  "GetContactsDialog.en-us": {
     "rootDialog": false,
     "triggers": {
       "": [
@@ -35,22 +31,12 @@
       "Skip": []
     }
   },
-  "SearchEventsDialog.en-us": {
-    "rootDialog": false,
-    "triggers": {
-      "": [
-        "ResolveDateTimeDialog.en-us",
-        "ListDialog.en-us"
-      ],
-      "No": []
-    }
-  },
   "UpdateEventDialog.en-us": {
     "rootDialog": false,
     "triggers": {
       "": [
         "ResolveDateTimeDialog.en-us",
-        "SearchEventsDialog.en-us",
+        "GetEventsDialog.en-us",
         "RespondToEventDialog.en-us",
         "RespondToEventDialog.en-us",
         "UpdateSlots.en-us",
