--- a/experimental/components/Greeting/Welcome.nuspec
+++ b/experimental/components/Greeting/Welcome.nuspec
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-        <id>Preview.Bot.Component.GreetingDialog</id>
+        <id>Preview.Bot.Component.Welcome</id>
         <version>0.0.1-preview5</version>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <releaseNotes>first version of greeting dialog package</releaseNotes>
-        <description>Dialogs to provide a greeting experience</description>
-        <tags>bf-component conversationalcore greeting preview</tags>
+        <releaseNotes>First version of welcome package</releaseNotes>
+        <description>Dialogs to provide a welcome experience</description>
+        <tags>bf-component conversationalcore welcome preview</tags>
         <dependencies />
     </metadata>
 
