--- a/experimental/components/Cancel/Cancel.nuspec
+++ b/experimental/components/Cancel/Cancel.nuspec
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-        <id>Preview.Bot.Component.HelpDialog</id>
+        <id>Preview.Bot.Component.Cancel</id>
         <version>0.0.1-preview1</version>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <releaseNotes>First version of Help Dialog package</releaseNotes>
-        <description>Dialog to provide "help" utterance handling</description>
-        <tags>bf-component conversationalcore helpdialog preview</tags>
+        <releaseNotes>First version of Cancel package</releaseNotes>
+        <description>Dialog to provide "cancel" utterance handling</description>
+        <tags>bf-component conversationalcore cancel preview</tags>
         <dependencies />
     </metadata>
 
