--- a/experimental/components/Welcome/Welcome.nuspec
+++ b/experimental/components/Welcome/Welcome.nuspec
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-        <id>Preview.Bot.Component.CancelDialog</id>
+        <id>Preview.Bot.Component.Welcome</id>
         <version>0.0.1-preview1</version>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <releaseNotes>First version of Cancel Dialog package</releaseNotes>
-        <description>Dialog to provide "cancel" utterance handling</description>
-        <tags>bf-component conversationalcore canceldialog preview</tags>
+        <releaseNotes>First version of welcome package</releaseNotes>
+        <description>Dialogs to provide a Welcome experience for new and returning users</description>
+        <tags>bf-component conversationalcore welcome preview</tags>
         <dependencies />
     </metadata>
 
