--- a/experimental/feeds/components.json
+++ b/experimental/feeds/components.json
@@ -1,6 +1,6 @@
 [
   {
-    "name": "Preview.Bot.Component.CancelDialog",
+    "name": "Preview.Bot.Component.Cancel",
     "version": "0.0.1-preview1",
     "source": "nuget",
     "language": "c#",
@@ -11,7 +11,7 @@
     "description": "Dialog to provide \"cancel\" utterance handling"
   },
   {
-    "name": "preview-bot-component-canceldialog",
+    "name": "preview-bot-component-cancel",
     "version": "0.0.1-preview1",
     "source": "npm",
     "language": "js",
@@ -20,28 +20,6 @@
       "Bot Framework"
     ],
     "description": "Dialog to provide \"cancel\" utterance handling"
-  },
-  {
-    "name": "Preview.Bot.Component.GreetingDialog",
-    "version": "0.0.1-preview5",
-    "source": "nuget",
-    "language": "c#",
-    "category": "Conversational Core",
-    "authors": [
-      "Bot Framework"
-    ],
-    "description": "Dialogs to provide a greeting experience"
-  },
-  {
-    "name": "preview-bot-component-greetingdialog",
-    "version": "0.0.1-preview3",
-    "source": "npm",
-    "language": "js",
-    "category": "Conversational Core",
-    "authors": [
-      "Bot Framework"
-    ],
-    "description": "Dialogs to provide a greeting experience"
   },
   {
     "name": "Preview.Bot.Component.Help",
@@ -55,7 +33,7 @@
     "description": "Dialog to provide \"help\" utterance handling"
   },
   {
-    "name": "preview-bot-component-helpdialog",
+    "name": "preview-bot-component-help",
     "version": "0.0.1-preview1",
     "source": "npm",
     "language": "js",
@@ -86,5 +64,27 @@
       "Bot Framework"
     ],
     "description": "Dialogs to provide an onboarding experience"
+  },
+  {
+    "name": "Preview.Bot.Component.Welcome",
+    "version": "0.0.1-preview1",
+    "source": "nuget",
+    "language": "c#",
+    "category": "Conversational Core",
+    "authors": [
+      "Bot Framework"
+    ],
+    "description": "Dialogs to provide a Welcome experience"
+  },
+  {
+    "name": "preview-bot-component-welcome",
+    "version": "0.0.1-preview1",
+    "source": "npm",
+    "language": "js",
+    "category": "Conversational Core",
+    "authors": [
+      "Bot Framework"
+    ],
+    "description": "Dialogs to provide a Welcome experience"
   }
 ]
