--- a/experimental/components/HelpAndCancel/HelpAndCancel.nuspec
+++ b/experimental/components/HelpAndCancel/HelpAndCancel.nuspec
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-        <id>Preview.Bot.Component.GreetingDialog</id>
-        <version>0.0.1-preview4</version>
+        <id>Preview.Bot.Component.HelpAndCancel</id>
+        <version>0.0.1-preview1</version>
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <releaseNotes>first version of greeting dialog package</releaseNotes>
-        <description>Dialogs to provide a greeting experience</description>
-        <tags>bf-component conversationalcore greeting preview</tags>
+        <releaseNotes>First version of HelpAndCancel package</releaseNotes>
+        <description>Dialog to provide "help" and "cancel" utterance handling</description>
+        <tags>bf-component conversationalcore helpintent cancelintent preview</tags>
         <dependencies />
     </metadata>
 
