--- a/experimental/components/Welcome/package.json
+++ b/experimental/components/Welcome/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "preview-bot-component-unknownintentdialog",
-  "version": "0.0.1-preview2",
-  "description": "Dialogs to provide a fallback experience",
+  "name": "preview-bot-component-welcome",
+  "version": "0.0.1-preview1",
   "keywords": ["bf-component"],
+  "description": "Dialogs to provide a Welcome experience for new and returning users",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
