--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -2,9 +2,9 @@ name: Build & Test for Calendar V2
 
 on:
   push:
-    branches: [ "calendarSkill_v2"]
+    branches: [ "calendarSkill_v2", "main" ]
   pull_request:
-    branches: [ "calendarSkill_v2" ]
+    branches: [ "calendarSkill_v2", "main" ]
 
 jobs:
   build:
