--- a/experimental/components/MsGraph/Microsoft.BotFramework.CustomAction.MsGraph.csproj
+++ b/experimental/components/MsGraph/Microsoft.BotFramework.CustomAction.MsGraph.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <!-- Nuget packaging information -->
