--- a/experimental/components/MsGraph/Microsoft.BotFramework.CustomAction.MsGraph.csproj
+++ b/experimental/components/MsGraph/Microsoft.BotFramework.CustomAction.MsGraph.csproj
@@ -8,7 +8,7 @@
   <!-- Nuget packaging information -->
   <PropertyGroup>
     <PackageId>Microsoft.Bot.Components.MsGraph</PackageId>
-    <PackageVersion>1.0.0-preview.1</PackageVersion>
+    <PackageVersion>1.0.0-alpha.1</PackageVersion>
     <Description>Plugin component for MSGraph custom action</Description>
     <Summary>Plugin component for MSGraph custom action.</Summary>
     <Company>Microsoft</Company>
@@ -20,6 +20,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.11.1" />
     <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.11.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Runtime.Plugins" Version="4.12.0-daily.preview.20210201.208375.958cb4f" />
     <PackageReference Include="Microsoft.Graph" Version="3.15.0" />
     
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.66">
