--- a/experimental/components/MsGraph/Microsoft.BotFramework.CustomAction.MsGraph.csproj
+++ b/experimental/components/MsGraph/Microsoft.BotFramework.CustomAction.MsGraph.csproj
@@ -5,9 +5,22 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <!-- Nuget packaging information -->
+  <PropertyGroup>
+    <PackageId>Microsoft.Bot.Components.MsGraph</PackageId>
+    <PackageVersion>1.0.0-alpha.1</PackageVersion>
+    <Description>Plugin component for MSGraph custom action</Description>
+    <Summary>Plugin component for MSGraph custom action.</Summary>
+    <Company>Microsoft</Company>
+    <Authors>Microsoft</Authors>
+    <Product>Microsoft Bot Builder SDK</Product>
+    <Copyright>© Microsoft Corporation. All rights reserved.</Copyright>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.11.1" />
     <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.11.1" />
+    <PackageReference Include="Microsoft.Bot.Builder.Runtime.Plugins" Version="4.12.0-daily.preview.20210201.208375.958cb4f" />
     <PackageReference Include="Microsoft.Graph" Version="3.15.0" />
     
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.66">
@@ -22,5 +35,4 @@
     <!-- Disable warning for SA1649 "file name should match first type name" due to use of generics -->
     <NoWarn>$(NoWarn),SA0001,SA1649</NoWarn>
   </PropertyGroup>
-
 </Project>
