--- a/experimental/templates/generator-multibot/generators/app/templates/settings/cross-train.config.json
+++ b/experimental/templates/generator-multibot/generators/app/templates/settings/cross-train.config.json
@@ -1,6 +1,8 @@
 {
   "conversational-core.en-us": {
     "rootDialog": true,
-    "triggers": {}
+    "triggers": {
+      "Calendar": []
+    }
   }
 }
