Empy bot now added to template dir instead of conversational core bot

--- a/experimental/templates/generator-bot-template-generator/app/templates/generators/app/templates/settings/appsettings.json
+++ b/experimental/templates/generator-bot-template-generator/app/templates/generators/app/templates/settings/appsettings.json
@@ -2,14 +2,13 @@
   "feature": {
     "UseShowTypingMiddleware": false,
     "UseInspectionMiddleware": false,
-    "RemoveRecipientMention": false,
-    "UseSetSpeakMiddleware": true
+    "RemoveRecipientMention": false
   },
   "MicrosoftAppPassword": "",
   "MicrosoftAppId": "",
   "cosmosDb": {
     "authKey": "",
-    "collectionId": "botstate-collection",
+    "containerId": "botstate-container",
     "cosmosDBEndpoint": "",
     "databaseId": "botstate-db"
   },
@@ -21,37 +20,54 @@
     "container": "transcripts"
   },
   "luis": {
-    "name": "Assistant",
+    "name": "",
     "authoringKey": "",
+    "authoringEndpoint": "",
     "endpointKey": "",
+    "endpoint": "",
     "authoringRegion": "westus",
     "defaultLanguage": "en-us",
-    "environment": "composer",
-    "endpoint": "",
-    "authoringEndpoint": ""
+    "environment": "composer"
+  },
+  "luFeatures": {
+    "enablePattern": true,
+    "enableMLEntities": true,
+    "enableListEntities": true,
+    "enableCompositeEntities": true,
+    "enablePrebuiltEntities": true,
+    "enableRegexEntities": true,
+    "enablePhraseLists": true
   },
   "publishTargets": [],
   "qna": {
+    "subscriptionKey": "",
     "knowledgebaseid": "",
-    "endpointkey": "",
-    "hostname": ""
+    "endpointKey": "",
+    "hostname": "",
+    "qnaRegion": "westus"
   },
   "telemetry": {
     "logPersonalInformation": false,
     "logActivities": true
   },
   "runtime": {
-    "customRuntime": true,
-    "path": "../",
-    "command": "dotnet run --project <%= name %>.csproj",
-    "key": "csharp-azurewebapp-v2"
+    "customRuntime": false,
+    "path": "",
+    "command": "",
+    "key": ""
   },
   "downsampling": {
-    "maxImbalanceRatio": 10,
-    "maxUtteranceAllowed": 15000
+    "maxImbalanceRatio": -1
   },
+  "skillConfiguration": {
+    "isSkill": true,
+    "allowedCallers": []
+  },
+  "skill": {},
   "defaultLanguage": "en-us",
   "languages": [
     "en-us"
-  ]
+  ],
+  "customFunctions": [],
+  "importedLibraries": []
 }
