--- a/skills/declarative/calendarSkill/runtime/customaction/Microsoft.BotFramework.Composer.CustomAction.csproj
+++ b/skills/declarative/calendarSkill/runtime/customaction/Microsoft.BotFramework.Composer.CustomAction.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\..\..\..\..\experimental\components\MsGraph\Microsoft.BotFramework.CustomAction.MsGraph.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Schemas\Actions\" />
+  </ItemGroup>
+
 </Project>
