Copy schema files to the nuget package

--- a/experimental/components/Calendar/Microsoft.BotFramework.CustomAction.CalendarSkill.csproj
+++ b/experimental/components/Calendar/Microsoft.BotFramework.CustomAction.CalendarSkill.csproj
@@ -29,7 +29,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include=".\Schemas\Actions\*.schema" CopyToOutputDirectory="always" />
+    <Content  Include=".\Schemas\Actions\*.schema" CopyToOutputDirectory="always">
+      <IncludeInPackage>true</IncludeInPackage>
+      <CopyToOutput>true</CopyToOutput>
+      <BuildAction>Content</BuildAction>
+      <copyToOutput>true</copyToOutput>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <PropertyGroup>
