--- a/experimental/components/MsGraph/Microsoft.BotFramework.CustomAction.MsGraph.csproj
+++ b/experimental/components/MsGraph/Microsoft.BotFramework.CustomAction.MsGraph.csproj
@@ -31,7 +31,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include=".\Schemas\*.schema" CopyToOutputDirectory="always" />
+    <Content Include=".\Schemas\*.schema" CopyToOutputDirectory="always">
+      <IncludeInPackage>true</IncludeInPackage>
+      <CopyToOutput>true</CopyToOutput>
+      <BuildAction>Content</BuildAction>
+      <copyToOutput>true</copyToOutput>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <PropertyGroup>
