--- a/skills/declarative/calendarSkill/settings/appsettings.json
+++ b/skills/declarative/calendarSkill/settings/appsettings.json
@@ -21,7 +21,7 @@
   },
   "luis": {
     "name": "calendarSkill",
-    "authoringRegion": "",
+    "authoringRegion": "westus",
     "defaultLanguage": "en-us",
     "environment": "composer",
     "endpoint": "",
@@ -58,5 +58,6 @@
     "allowedCallers": [
       "*"
     ]
-  }
+  },
+  "customFunctions": []
 }
