--- a/skills/declarative/calendarSkill/runtime/tests/Microsoft.BotFramework.Composer.Tests.csproj
+++ b/skills/declarative/calendarSkill/runtime/tests/Microsoft.BotFramework.Composer.Tests.csproj
@@ -29,6 +29,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\customaction\Microsoft.BotFramework.Composer.CustomAction.csproj" />
+    <ProjectReference Include="..\..\..\..\..\experimental\components\MsGraph\Microsoft.BotFramework.CustomAction.MsGraph.csproj" />
+    <ProjectReference Include="..\..\..\..\..\experimental\components\Calendar\Microsoft.BotFramework.CustomAction.CalendarSkill.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,5 +38,4 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-
 </Project>
