--- a/experimental/components/Calendar/Microsoft.BotFramework.CustomAction.CalendarSkill.csproj
+++ b/experimental/components/Calendar/Microsoft.BotFramework.CustomAction.CalendarSkill.csproj
@@ -9,7 +9,7 @@
   <!-- Nuget packaging information -->
   <PropertyGroup>
     <PackageId>Microsoft.Bot.Components.CalendarSkill</PackageId>
-    <PackageVersion>1.0.0-alpha.1</PackageVersion>
+    <PackageVersion>1.0.0-alpha.2</PackageVersion>
     <Description>Plugin component for Calendaring custom action</Description>
     <Summary>Plugin component for Calendaring custom action.</Summary>
     <Company>Microsoft</Company>
@@ -31,11 +31,12 @@
 
   <ItemGroup>
     <Content Include=".\Schemas\Actions\*.schema" CopyToOutputDirectory="always">
-      <IncludeInPackage>true</IncludeInPackage>
-      <CopyToOutput>true</CopyToOutput>
-      <BuildAction>Content</BuildAction>
-      <copyToOutput>true</copyToOutput>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <PackageCopyToOutput>true</PackageCopyToOutput>
+      <PackagePath>exported\$(AssemblyName)</PackagePath>
+    </Content>
+    <Content Include="..\MsGraph\Schemas\*.schema" CopyToOutputDirectory="always">
+      <PackageCopyToOutput>true</PackageCopyToOutput>
+      <PackagePath>exported\$(AssemblyName)</PackagePath>
     </Content>
   </ItemGroup>
 
