--- a/packages/MsGraph/Microsoft.Bot.Component.MsGraph.csproj
+++ b/packages/MsGraph/Microsoft.Bot.Component.MsGraph.csproj
@@ -7,7 +7,7 @@
 
   <!-- Nuget packaging information -->
   <PropertyGroup>
-    <PackageId>Microsoft.Bot.Components.MsGraph</PackageId>
+    <PackageId>Microsoft.Bot.Component.MsGraph</PackageId>
     <PackageVersion>1.0.0-alpha.1</PackageVersion>
     <Description>Plugin component for MSGraph custom action</Description>
     <Summary>Plugin component for MSGraph custom action.</Summary>
